--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,7 @@
 asgiref==3.5.2
-Django==3.0.2
+Django==4.1.2
 Pillow==9.1.1
 pytz==2022.1
-sqlparse==0.4.2
+django-crispy-forms==1.14.0
+djangorestframework==3.14.0
+sqlparse==0.4.3
