--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,8 @@
 asgiref==3.5.2
 Django==4.1.2
-Pillow==9.1.1
-pytz==2022.1
 django-crispy-forms==1.14.0
 djangorestframework==3.14.0
+Pillow==9.1.1
+pytz==2022.1
 sqlparse==0.4.3
+tzdata==2022.6
